k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # 이미지를 넣어주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_6c1fb5913404
