k8s/vue_vite.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-vite
  labels:
    app: vue-vite
spec:
  selector:
    matchLabels:
      app: vue-vite
  template:
    metadata:
      labels:
        app: vue-vite
    spec:
      containers:
        - name: vue-vite
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_e6f7b4a8e333
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vue-vite
  name: vue-vite
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: vue-vite
---
