k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: backend
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /k6d6d1b8e4034a/backend
            backend:
              serviceName: backend
              servicePort: 3000
            # path: /k63ebdb037a8fa(/|$)(.*)
            pathType: Prefix
            
          - path: /k6d6d1b8e4034a/frontend
            backend:
              serviceName: frontend
              servicePort: 3000
            # path: /k63ebdb037a8fa(/|$)(.*)
            pathType: Prefix
